fix timeline overflow

--- a/src/ui/components/organisms/Timeline/_style.scss
+++ b/src/ui/components/organisms/Timeline/_style.scss
@@ -15,7 +15,7 @@
 	flex-flow: column wrap;
 	padding: 0;
 	//height: 810px; // test
-	margin-bottom: 6rem; // test
+	//margin-bottom: 6rem; // test
 	&:after {
 	    z-index: 1;
 	    content: "";
